# PcamVLM

./: .gitattributes  .gitignore  Makefile  README.md  _fix.py  app.py  pcam_lightweight_train.ipynb  pcam_medgemma_vlm_finetune.ipynb  pyproject.toml  requirements-deploy.txt  requirements.txt  train.py  train_light.py
.streamlit/: config.toml
models/: lightweight-pcam.json
src/: __init__.py  core.py  data.py  evaluate.py  infer.py  lightweight.py  model.py  persist.py
tests/: test_smoke.py
